--- a/index.html
+++ b/index.html
@@ -287,11 +287,12 @@
             <h2 class="title">Contact me</h2>
             <div class="contact-content-1">
                 <div class="my-cont">
-                <div class="cont-box-1 cont-box-a "><img src="./src/phone1.png" alt="" ><h2>+91 8554958977</h2></div>
-                <div class="cont-box-1 cont-box-b"><img src="./src/mail1.png" alt=""><h2><a href="mailto:vaibhavghawale007@gmail.com?subject=regarding hiring">e-Mail</a></h2></div>
-                <div class="cont-box-1 cont-box-c"><img src="./src/linkedin2.png"  alt=""><h2><a href="https://www.linkedin.com/in/vaibhavghawale15/" target="_blank">Linkedin</a></h2></div>
-                <div class="cont-box-1 cont-box-d"><img src="./src/GitHublogo2.png" alt="" ><h2><a href="https://github.com/thecodervaibhav" target="_blank">Github</a> </h2></div>
-                <div class="cont-box-1 cont-box-e"><img src="./src/tweet.png" alt="" > <h2><a href="https://twitter.com/VaibhavGhawale" target="_blank">Twitter</a></h2></div>
+                <div class="cont-box-1 cont-box-a "><img src="./src/newphone.png" alt="" ><h2>+91 8554958977</h2></div>
+                <div class="cont-box-1 cont-box-b"><img src="./src/newmail.png" alt=""><h2><a href="mailto:vaibhavghawale007@gmail.com?subject=regarding hiring">e-Mail</a></h2></div>
+                <div class="cont-box-1 cont-box-c"><img src="./src/newlink.png"  alt=""><h2><a href="https://www.linkedin.com/in/vaibhavghawale15/" target="_blank">Linkedin</a></h2></div>
+                <div class="cont-box-1 cont-box-d"><img src="./src/newgit.png" alt="" ><h2><a href="https://github.com/thecodervaibhav" target="_blank">Github</a> </h2></div>
+                <div class="cont-box-1 cont-box-e"><img src="./src/newtwi.png" alt="" > <h2><a href="https://twitter.com/VaibhavGhawale" target="_blank">Twitter</a></h2></div>
+                <div class="cont-box-1 cont-box-e"><img src="./src/newresume.png" alt="" > <h2><a href="./src/Vaibhav-Ghawale-Resume.pdf" download="Vaibhav Ghawale Resume">Resume</a></h2></div>
                </div>
             </div>
     </section>
