--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title> Vaibhav Ghawale | Portfolio </title>
     <link rel="stylesheet" href="common.css">
     <link rel="icon" type="image/x-icon" href="./src/favicon.ico.png"  sizes="50x50 60x60" style="background-color:transparent;">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.11/typed.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
@@ -24,7 +26,7 @@
                 <li><a href="#home" class="menu-btn">Home</a></li>
                 <li><a href="#about" class="menu-btn">About</a></li>
                 <li><a href="#skills" class="menu-btn">Skills</a></li>
-                <li><a href="#skills" class="menu-btn">Education</a></li>
+                <li><a href="#education" class="menu-btn">Education</a></li>
                 <li><a href="#project" class="menu-btn">Projects</a></li>
                 <li><a href="#contact" class="menu-btn">Contact</a></li>
             </ul>
@@ -58,10 +60,10 @@
             I'm also an enthusiastic learner who's constantly working to learn new things and 
             improve my skills to be the best version of myself.</p>
             <div class="abt-img">
-                <img class="abt-img-1"  src="./src/mail.png" alt="">
-                <img class="abt-img-2" src="./src/GitHublogo2.png" alt="">
-                <img class="abt-img-3" src="./src/linkedin.png" alt="">
-                <img class="abt-img-4" src="./src/tweet.png" alt="">
+                <img class="abt-img-1 abt-img-c"  src="./src/mail.png" alt="">
+                <img class="abt-img-2 abt-img-c" src="./src/GitHublogo2.png" alt="">
+                <img class="abt-img-3 abt-img-c" src="./src/linkedin.png" alt="">
+                <img class="abt-img-4 abt-img-c" src="./src/tweet.png" alt="">
             </div>
         </div>
 
@@ -287,12 +289,12 @@
             <h2 class="title">Contact me</h2>
             <div class="contact-content-1">
                 <div class="my-cont">
-                <div class="cont-box-1 cont-box-a "><img src="./src/newphone.png" alt="" ><h2>+91 8554958977</h2></div>
+                <div class="cont-box-1 cont-box-a "><img src="./src/newphone.png" alt="" ><h2><a href="tel:+918554958977">+91 8554958977</a></h2></div>
                 <div class="cont-box-1 cont-box-b"><img src="./src/newmail.png" alt=""><h2><a href="mailto:vaibhavghawale007@gmail.com?subject=regarding hiring">e-Mail</a></h2></div>
                 <div class="cont-box-1 cont-box-c"><img src="./src/newlink.png"  alt=""><h2><a href="https://www.linkedin.com/in/vaibhavghawale15/" target="_blank">Linkedin</a></h2></div>
                 <div class="cont-box-1 cont-box-d"><img src="./src/newgit.png" alt="" ><h2><a href="https://github.com/thecodervaibhav" target="_blank">Github</a> </h2></div>
                 <div class="cont-box-1 cont-box-e"><img src="./src/newtwi.png" alt="" > <h2><a href="https://twitter.com/VaibhavGhawale" target="_blank">Twitter</a></h2></div>
-                <div class="cont-box-1 cont-box-e"><img src="./src/newresume.png" alt="" > <h2><a href="./src/Vaibhav-Ghawale-Resume.pdf" download="Vaibhav Ghawale Resume">Resume</a></h2></div>
+                <div class="cont-box-1 cont-box-f"><img src="./src/newresume.png" alt="" > <h2><a href="./src/Vaibhav-Ghawale-Resume.pdf" download="Vaibhav Ghawale Resume">Resume</a></h2></div>
                </div>
             </div>
     </section>
