--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="common.css">
     <link rel="icon" type="image/x-icon" href="./src/favicon.ico.png"  sizes="50x50 60x60" style="background-color:transparent;">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="github.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.11/typed.min.js"></script>
@@ -21,7 +22,7 @@
     </div>
     <nav class="navbar">
         <div class="max-width">
-            <div class="logo"><a href=""><span>Vaibhav</span></a></div>
+            <div class="logo"><a href="#"><span>Java</span>Developer</a></div>
             <ul class="menu">
                 <li><a href="#home" class="menu-btn">Home</a></li>
                 <li><a href="#about" class="menu-btn">About</a></li>
@@ -52,7 +53,7 @@
     <section class="about" id="about">
         <div>
             <h2 class="title">About me</h2>
-           <div class="my-pic"> <img src="./src/vaibhav.png" alt="vaibhav ghawale" >
+           <div class="my-pic"> <img src="./src/vaibhav.jpg" alt="vaibhav ghawale" >
            </div>
             <p class="about-me">A passionate JAVA Back-End Developer, Dedicated to 
             developing robust applications that interact with the Backend part of web applications. 
@@ -263,6 +264,9 @@
             <h1 class="title">Github Stats</h1>
             <div class="github-stats-list">
                 <div class="github-stat">
+                    <img src="https://github-readme-stats.vercel.app/api/top-langs/?username=thecodervaibhav&layout=default&langs_count=8&hide=&theme=indian-flag" alt="vaibhav ghawale" height="275px" width="30%"/>
+                </div>
+                <div class="github-stat">
                     <img src="https://github-readme-streak-stats.herokuapp.com/?user=thecodervaibhav&theme=indian-flag"
                         alt="Github Contributions" />
                 </div>
@@ -270,22 +274,51 @@
                     <img src="https://github-readme-stats.vercel.app/api?username=thecodervaibhav&theme=flag-india&show_icons=true&count_private=true"
                         alt="Github Stats" />
                 </div>
-                <div class="github-stat">
+                <div class="github-stat" id="most-lang">
                     <img src="https://activity-graph.herokuapp.com/graph?username=thecodervaibhav&bg_color=ffffff&color=000080&line=138808&point=ff9933&area=true"
                         alt="Github Graph" />
                 </div>
-                <div class="github-stat">
-                    <h4 class="mb-0" style="text-align: center;color: #000;">Vaibhav Ghawale's contribution calendar</h4>
-                    <img src="https://ghchart.rshah.org/thecodervaibhav" alt="thecodervaibhav" style="width: 100%;height: auto; margin-top: 5vh;color: green;"/>
-                    <!-- <img src="https://activity-graph.herokuapp.com/calender?username=thecodervaibhav&bg_color=ffffff&color=000080&line=138808&point=ff9933&area=true" -->
-                </div>
             </div>
         </div>
+    <h4 class="mb-0">
+        ----- GitHub contribution calendar ----- </h4>
+     <div class="calendar">
+      </div>
+      <div class="heading" id="github">
+        <h2>----- My Statics -----</h2>
+       
+    </div>
+    <div class="skills-content-stat" id="statics">
+        <div class="skills-box">
+            <div class="circle"><h2>1200+</h2></div>
+            <h3>Hour of coding</h3>
+        </div>
+        <div class="skills-box">
+            <div class="circle"><h2>400+</h2></div>
+            <h3>DSA Questions</h3>
+        </div>
+        <div class="skills-box">
+            <div class="circle"><h2>100+</h2></div>
+            <h3>Hours of Soft Skills</h3>
+        </div>
+        <div class="skills-box">
+            <div class="circle"><h2>300+</h2></div>
+            <h3>Github Commits</h3>
+        </div>
+        <div class="skills-box">
+            <div class="circle"><h2>3+</h2></div>
+            <h3>Collaborative Projects</h3>
+        </div>
+        <div class="skills-box">
+            <div class="circle"><h2>10+</h2></div>
+            <h3>Solo Projects</h3>
+        </div>
+      
+    </div>     
     </div>
 </section>
     <!-- contact section start -->
     <section class="contact" id="contact">
-
             <h2 class="title">Contact me</h2>
             <div class="contact-content-1">
                 <div class="my-cont">
@@ -308,3 +341,8 @@
     <script src="./common.js"></script>
 </body>
 </html>
+<script src="index.js"></script>
+<script src="https://unpkg.com/github-calendar@latest/dist/github-calendar.min.js"></script>
+<script>
+  GitHubCalendar(".calendar", "thecodervaibhav", { responsive: true });
+</script>
