--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"/>
+    <link rel="stylesheet" href="skills.css">
 
 </head>
 <body>
@@ -102,34 +103,46 @@
     <section class="skills" id="skills">
         <div class="max-width">
             <h2 class="title">Tech skills</h2>
-            <div class="skills-content">
-                <div id="skils-content-1">
-                    <div class="skill-1">
-                        <img src="./src/javalogo.png" alt="">
-                    </div>
-                    <div class="skill-1">
-                        <img src="./src/hibarnatelogo.png" alt="">
-                    </div>
-                    <div class="skill-1">
-                        <img src="./src/mysqllogo.png" alt="">
-                    </div>
-                    <div class="skill-1">
-                        <img src="./src/springbootlogo.png" alt="">
-                    </div>
-                    <div class="skill-1">
-                        <img src="./src/jslogo.png" alt="">
-                    </div>
-                    <div class="skill-1">
-                        <img src="./src/htmllogo.webp" alt="">
-                    </div>
-                    <div class="skill-1">
-                        <img src="./src/csslogo.png" alt="">
-                    </div>
-                    <div class="skill-1">
-                        <img src="./src/DSA.png" alt="">
-                    </div>
+            <div id="skills1">
+                <div id="skills-container1">
+                  <div>
+                    <img src="./Imges/java.png" alt="java" />
+                    <p>Java</p>
+                  </div>
+                  <div>
+                    <img src="./Imges/js.png" alt="java" />
+                    <p>JavaScript</p>
+                  </div>
+                  <div>
+                    <img src="./Imges/html.png" alt="java" />
+                    <p>HTML</p>
+                  </div>
+                  <div>
+                    <img src="./Imges/css.png" alt="java" />
+                    <p>CSS</p>
+                  </div>
+                  <div>
+                    <img src="./Imges/github.png" alt="java" />
+                    <p>Github</p>
+                  </div>
+                  <div>
+                    <img src="./Imges/netlify.png" alt="java" />
+                    <p>Netlify</p>
+                  </div>
+                  <div>
+                    <img src="./Imges/MySQL.jpg" alt="java" />
+                    <p>MySQL</p>
+                  </div>
+                  <div>
+                    <img src="./Imges/springboot.png" alt="java" />
+                    <p>Spring Boot</p>
+                  </div>
+                  <div>
+                    <img src="./Imges/hibernate.png" alt="java" />
+                    <p>Hibernate</p>
+                  </div>
                 </div>
-                </div>
+              </div>
                 <h2 class="title soft">Soft skills</h2>
                 <div class="skills-content">
                     <div id="skils-content-1">
