--- a/slide.html
+++ b/slide.html
@@ -5,45 +5,51 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"/>
+    <style>
+   
+    </style>
 </head>
 <body>
-    <div class="swiper">
-        <!-- Additional required wrapper -->
-        <div class="swiper-wrapper">
-          <!-- Slides -->
-          <div class="swiper-slide"><img src="./src/wall.jpg" alt=""></div>
-          <div class="swiper-slide"><img src="./src/bg3.avif" alt="">
+    <div id="skills1">
+        <h1 class="heading1">----- My Skills -----</h1>
+        <div id="skills-container1">
+          <div>
+            <img src="./Imges/java.png" alt="java" />
+            <p>Java</p>
           </div>
-          <div class="swiper-slide"><img src="./src/javawall.webp" alt=""></div>
-          ...
+          <div>
+            <img src="./Imges/js.png" alt="java" />
+            <p>JavaScript</p>
+          </div>
+          <div>
+            <img src="./Imges/html.png" alt="java" />
+            <p>HTML</p>
+          </div>
+          <div>
+            <img src="./Imges/css.png" alt="java" />
+            <p>CSS</p>
+          </div>
+          <div>
+            <img src="./Imges/github.png" alt="java" />
+            <p>Github</p>
+          </div>
+          <div>
+            <img src="./Imges/netlify.png" alt="java" />
+            <p>Netlify</p>
+          </div>
+          <div>
+            <img src="./Imges/MySQL.jpg" alt="java" />
+            <p>MySQL</p>
+          </div>
+          <div>
+            <img src="./Imges/springboot.png" alt="java" />
+            <p>Spring Boot</p>
+          </div>
+          <div>
+            <img src="./Imges/hibernate.png" alt="java" />
+            <p>Hibernate</p>
+          </div>
         </div>
-        <!-- If we need pagination -->
-        <div class="swiper-pagination"></div>
-      
-        <!-- If we need navigation buttons -->
-        <div class="swiper-button-prev"></div>
-        <div class="swiper-button-next"></div>
       </div>
-      <script>
-        const swiper = new Swiper('.swiper', {
-            loop: true,
-            autoplay:{
-            Delay: 2000,
-            disableOnInteraction:false,
-     },
-    
-     pagination: {
-       el: '.swiper-pagination',
-       Clicable:true,
-   
-     },
-     navigation: {
-       nextEl: '.swiper-button-next',
-       prevEl: '.swiper-button-prev',
-     },
-   });
-   </script>
-      <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
 </body>
 </html>
