--- a/index.html
+++ b/index.html
@@ -277,18 +277,18 @@
             <h1 class="title">Github Stats</h1>
             <div class="github-stats-list">
                 <div class="github-stat">
-                    <img src="https://github-readme-stats.vercel.app/api/top-langs/?username=thecodervaibhav&layout=default&langs_count=8&hide=&theme=indian-flag" alt="vaibhav ghawale" height="275px" width="30%"/>
+                    <img src="https://github-readme-stats.vercel.app/api/top-langs/?username=thecodervaibhav&layout=default&langs_count=8&hide=&theme=highcontrast" alt="vaibhav ghawale" height="275px" width="30%"/>
                 </div>
                 <div class="github-stat">
-                    <img src="https://github-readme-streak-stats.herokuapp.com/?user=thecodervaibhav&theme=indian-flag"
+                    <img src="https://github-readme-streak-stats.herokuapp.com/?user=thecodervaibhav&theme=highcontrast"
                         alt="Github Contributions" />
                 </div>
                 <div class="github-stat">
-                    <img src="https://github-readme-stats.vercel.app/api?username=thecodervaibhav&theme=flag-india&show_icons=true&count_private=true"
+                    <img src="https://github-readme-stats.vercel.app/api?username=thecodervaibhav&theme=highcontrast&show_icons=true&count_private=true"
                         alt="Github Stats" />
                 </div>
                 <div class="github-stat" id="most-lang">
-                    <img src="https://activity-graph.herokuapp.com/graph?username=thecodervaibhav&bg_color=ffffff&color=000080&line=138808&point=ff9933&area=true"
+                    <img src="https://activity-graph.herokuapp.com/graph?username=thecodervaibhav&bg_color=ffffff&color=000080&line=138808&point=ff9933&area=true&theme=highcontrast"
                         alt="Github Graph" />
                 </div>
             </div>
