--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
                         alt="Github Stats" />
                 </div>
                 <div class="github-stat" id="most-lang">
-                    <img src="https://activity-graph.herokuapp.com/graph?username=thecodervaibhav&bg_color=ffffff&color=000080&line=138808&point=ff9933&area=true&theme=highcontrast"
+                    <img src="https://activity-graph.herokuapp.com/graph?username=thecodervaibhav&theme=xcode"
                         alt="Github Graph" />
                 </div>
             </div>
