--- a/index.html
+++ b/index.html
@@ -30,7 +30,10 @@
                 <li><a href="#skills" class="menu-btn">Skills</a></li>
                 <li><a href="#education" class="menu-btn">Education</a></li>
                 <li><a href="#project" class="menu-btn">Projects</a></li>
+                <li><a href="#github-" class="menu-btn">Stats</a></li>
                 <li><a href="#contact" class="menu-btn">Contact</a></li>
+
+                
             </ul>
             <div class="menu-btn">
                 <i class="fas fa-bars"></i>
@@ -239,8 +242,6 @@
                     <p class="tech-stach">Tech Stack: HTML | CSS | JS</p>
                     <p class="resp-proj">My Responsibilities
                     making a Payment Gateway where user can easy make payment.</p>
-                    <!-- <a href="https://github.com/AmitKuMaurya/LifeStyle-Collaboration" class="resume-btn">Github</a>
-                    <a href="https://ubiquitous-moonbeam-0077c0.netlify.app/" class="resume-btn">Live</a> -->
                     <div>
                         <img class="pr2g" src="./src/GitHublogo2.png" alt="">
                         <img class="pr2l" src="./src/newlive1.png" alt="">
