--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
 
     <!-- footer section start -->
     <footer>
-        <span class="copyright"></span>All Rights Reserved @ 2022
+        <span class="copyright"></span>All Rights Reserved @ Vaibhav
     </span>
     </footer>
 
