--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
                 <li><a href="#project" class="menu-btn">Projects</a></li>
                 <li><a href="#github-" class="menu-btn">Stats</a></li>
                 <li><a href="#contact" class="menu-btn">Contact</a></li>
-
-                
+                <li><a href="./src/Vaibhav-Ghawale-Resume.pdf" download="Vaibhav Ghawale Resume" class="menu-btn">Resume</a></li>     
             </ul>
             <div class="menu-btn">
                 <i class="fas fa-bars"></i>
@@ -203,7 +202,6 @@
             </div>
             <div class="card">
                 <div class="box">
-                    <!-- <i class="fas fa-code"></i> -->
                     <img class="edu-logo" src="./src/maharastrastate.png" alt="">
                     <div class="text">10+2</div>
                     <p>Complete 10+2 in General Science from Nandgaon khandeshwar junior collage Nandgaon khandeshwar</p>
@@ -225,8 +223,6 @@
                     <p class="tech-stach">Tech Stack: HTML | CSS | JS</p>
                     <p class="resp-proj">My Responsibilities
                     front-end and backend database.</p>
-                    <!-- <a href="https://github.com/Abrar2003/symptomatic-property-4004" class="resume-btn">Github</a>
-                    <a href="https://jade-sawine-5e8a26.netlify.app/" class="resume-btn">Live</a> -->
                     <div>
                         <img class="pr1g" src="./src/GitHublogo2.png" alt="">
                         <img class="pr1l" src="./src/newlive1.png" alt="">
@@ -242,6 +238,21 @@
                     <p class="tech-stach">Tech Stack: HTML | CSS | JS</p>
                     <p class="resp-proj">My Responsibilities
                     making a Payment Gateway where user can easy make payment.</p>
+                    <div>
+                        <img class="pr2g" src="./src/GitHublogo2.png" alt="">
+                        <img class="pr2l" src="./src/newlive1.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="project-main">
+            <div class="inside-1"><img src="./src/phonepay.png" alt=""> </div>
+            <div class="inside-2">
+                <div><h2>PHONE PAY (CLONE)</h2></div>
+                <div class="pro-info"><p> Phone Pay is Application where user can Send Money or Recieve Money in direct Bank or Wallet As well as he can pay his bill of credit card, electricity, mobile,tv etc.</p>
+                    <p class="tech-stach">Tech Stack: HTML | CSS | JS</p>
+                    <p class="resp-proj">My Responsibilities
+                    Making a Payment Gateway where user can easy make payment of Phone Pay App. Using a Html, CSS, And JavaScript</p>
                     <div>
                         <img class="pr2g" src="./src/GitHublogo2.png" alt="">
                         <img class="pr2l" src="./src/newlive1.png" alt="">
