--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <li><a href="#project" class="menu-btn">Projects</a></li>
                 <li><a href="#github-" class="menu-btn">Stats</a></li>
                 <li><a href="#contact" class="menu-btn">Contact</a></li>
-                <li><a href="./src/Vaibhav-Ghawale-Resume.pdf" download="Vaibhav Ghawale Resume" class="menu-btn">Resume</a></li>     
+                <li><a href="./src/Vaibhav-Ghawale-Resume.pdf" download="Vaibhav Ghawale Resume" class="menu-btn cont-box-f">Resume</a></li>     
             </ul>
             <div class="menu-btn">
                 <i class="fas fa-bars"></i>
@@ -47,7 +47,7 @@
                 <div class="text-1">Hi, my name is</div>
                 <div class="text-2">Vaibhav Ghawale</div>
                 <div class="text-3">And I'm a <span class="typing"></span></div>
-                <a href="./src/Vaibhav-Ghawale-Resume.pdf" download="Vaibhav Ghawale Resume">Resume</a>
+                <a href="./src/Vaibhav-Ghawale-Resume.pdf" download="Vaibhav Ghawale Resume" class="cont-box-f">Resume</a>
             </div>
         </div>
     </section>
