--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div class="logo"><a href="#"><span>Java</span>Developer</a></div>
             <ul class="menu">
                 <li><a href="#home" class="menu-btn">Home</a></li>
-                <li><a href="#about" class="menu-btn">About</a></li>
+                <!-- <li><a href="#about" class="menu-btn">About</a></li> -->
                 <li><a href="#skills" class="menu-btn">Skills</a></li>
                 <li><a href="#education" class="menu-btn">Education</a></li>
                 <li><a href="#project" class="menu-btn">Projects</a></li>
@@ -245,7 +245,7 @@
                 </div>
             </div>
         </div>
-        <div class="project-main">
+        <!-- <div class="project-main">
             <div class="inside-1"><img src="./src/phonepay.png" alt=""> </div>
             <div class="inside-2">
                 <div><h2>PHONE PAY (CLONE)</h2></div>
@@ -259,7 +259,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
         <div class="project-main">
             <div class="inside-1"><img src="./src/orb.png" alt=""> </div>
             <div class="inside-2">
