--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     </section>
 
     <!-- services section start -->
-    <section class="services" id="services">
+    <!-- <section class="services" id="services">
             <h2 class="title">My services</h2>
             <div class="serv-content ">
                 <div class="card">
@@ -99,7 +99,7 @@
                     </div>
                 </div>
                </div>
-    </section>
+    </section> -->
 
     <!-- skills section start -->
     <section class="skills" id="skills">
