--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
             <div class="logo"><a href="#"><span>Java</span>Developer</a></div>
             <ul class="menu">
                 <li><a href="#home" class="menu-btn">Home</a></li>
-                <!-- <li><a href="#about" class="menu-btn">About</a></li> -->
+                <li><a href="#about" class="menu-btn">About</a></li>
                 <li><a href="#skills" class="menu-btn">Skills</a></li>
-                <li><a href="#education" class="menu-btn">Education</a></li>
+                <!-- <li><a href="#education" class="menu-btn">Education</a></li> -->
                 <li><a href="#project" class="menu-btn">Projects</a></li>
-                <li><a href="#github-" class="menu-btn">Stats</a></li>
+                <!-- <li><a href="#github-" class="menu-btn">Stats</a></li> -->
                 <li><a href="#contact" class="menu-btn">Contact</a></li>
                 <li><a href="./src/Vaibhav-Ghawale-Resume.pdf" download="Vaibhav Ghawale Resume" class="menu-btn cont-box-f">Resume</a></li>     
             </ul>
