--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <div class="home-content">
                 <div class="text-1">Hi, my name is</div>
                 <div class="text-2">Vaibhav Ghawale</div>
-                <div class="text-3">And I'm a <span class="typing"></span></div>
+                <div class="text-3">And I'm a Backend Developer</div>
                 <a href="./src/Vaibhav-Ghawale-Resume.pdf" download="Vaibhav Ghawale Resume" class="cont-box-f">Resume</a>
             </div>
         </div>
