--- a/index.html
+++ b/index.html
@@ -214,6 +214,31 @@
     <section class="project" id="project"> 
         <h2 class="title">Project</h2>
         <div class="cont-box">
+            <div class="project-main">
+                <div class="inside-1"><img src="./src/bus-pro1.JPG" alt=""> </div>
+                <div class="inside-2">
+                    <div><h2>BUS RESERVATION PORTAL SYSTEM</h2></div>
+                    <div class="pro-info"><p>Project help to create a REST API for a Bus Reservation System Portal application. This API performs all the fundamental CRUD operations of any Bus Reservation System Portal with user validation at every step.
+                    </p>
+                        <p class="tech-stach">Tech Stack: JAVA | Spring Framework | Spring Boot | Spring Data JPA | Hibernate | MySQL</p>
+                        <p class="resp-proj"></p>
+                        <p class="resp-proj"> <span> Features :</span> 
+                                              Login, Logout Module ,
+                                              Admin Module ,
+                                              User Module ,
+                                              Route Module ,
+                                              Bus Module ,
+                                              Reservation Module ,
+                                              Feedback Module</p>
+                        <p class="resp-proj"> <span>My Responsibilities : Creating API of Reservation Module. Tesing All Module . Motivate team and dividing a every day task.</span>
+                        </p>
+                        <div>
+                            <img class="pr1g pr0g" src="./src/GitHublogo2.png" alt="">
+                            <img class="pr1l pr0l" src="./src/newlive1.png" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
         <div class="project-main">
             <div class="inside-1"><img src="./src/cm1.png" alt=""> </div>
             <div class="inside-2">
