--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <div class="text-1">Hi, my name is</div>
                 <div class="text-2">Vaibhav Ghawale</div>
                 <div class="text-3">And I'm a Backend Developer</div>
-                <a href="./src/Vaibhav-Ghawale-Resume.pdf" download="Vaibhav Ghawale Resume" class="cont-box-f">Resume</a>
+                <a href="./src/Vaibhav-Ghawale-Resume.pdf" download="Vaibhav-Ghawale-Resume" class="cont-box-f">Resume</a>
             </div>
         </div>
     </section>
@@ -222,14 +222,6 @@
                     </p>
                         <p class="tech-stach">Tech Stack: JAVA | Spring Framework | Spring Boot | Spring Data JPA | Hibernate | MySQL</p>
                         <p class="resp-proj"></p>
-                        <p class="resp-proj"> <span> Features :</span> 
-                                              Login, Logout Module ,
-                                              Admin Module ,
-                                              User Module ,
-                                              Route Module ,
-                                              Bus Module ,
-                                              Reservation Module ,
-                                              Feedback Module</p>
                         <p class="resp-proj"> <span>My Responsibilities : Creating API of Reservation Module. Tesing All Module . Motivate team and dividing a every day task.</span>
                         </p>
                         <div>
