--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <div class="text-1">Hi, my name is</div>
                 <div class="text-2">Vaibhav Ghawale</div>
                 <div class="text-3">And I'm a Backend Developer</div>
-                <a href="./src/Vaibhav-Ghawale-Resume.pdf" download="Vaibhav-Ghawale-Resume" class="cont-box-f">Resume</a>
+                <a href="./src/Vaibhav-Ghawale-Resume.pdf" download="Vaibhav-Ghawale-Resume" class="cont-box-f open-me">Resume</a>
             </div>
         </div>
     </section>
@@ -369,7 +369,7 @@
                 <div class="cont-box-1 cont-box-c"><img src="./src/newlink.png"  alt=""><h2><a href="https://www.linkedin.com/in/vaibhavghawale15/" target="_blank">Linkedin</a></h2></div>
                 <div class="cont-box-1 cont-box-d"><img src="./src/newgit.png" alt="" ><h2><a href="https://github.com/thecodervaibhav" target="_blank">Github</a> </h2></div>
                 <div class="cont-box-1 cont-box-e"><img src="./src/newtwi.png" alt="" > <h2><a href="https://twitter.com/VaibhavGhawale" target="_blank">Twitter</a></h2></div>
-                <div class="cont-box-1 cont-box-f"><img src="./src/newresume.png" alt="" > <h2><a href="./src/Vaibhav-Ghawale-Resume.pdf" download="Vaibhav Ghawale Resume">Resume</a></h2></div>
+                <div class="cont-box-1 cont-box-f open-me"><img src="./src/newresume.png" alt="" > <h2><a href="./src/Vaibhav-Ghawale-Resume.pdf" download="Vaibhav Ghawale Resume">Resume</a></h2></div>
                </div>
             </div>
     </section>
