--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                 <div class="inside-1"><img src="./src/bus-pro1.JPG" alt=""> </div>
                 <div class="inside-2">
                     <div><h2>BUS RESERVATION PORTAL SYSTEM</h2></div>
-                    <div class="pro-info"><p>Project help to create a REST API for a Bus Reservation System Portal application. This API performs all the fundamental CRUD operations of any Bus Reservation System Portal with user validation at every step.
+                    <div class="pro-info"><p>Project help to create a REST API for a Bus Reservation System Portal application.
                     </p>
                         <p class="tech-stach">Tech Stack: JAVA | Spring Framework | Spring Boot | Spring Data JPA | Hibernate | MySQL</p>
                         <p class="resp-proj"></p>
