--- a/index.html
+++ b/index.html
@@ -316,10 +316,10 @@
                     <img src="https://github-readme-stats.vercel.app/api?username=thecodervaibhav&theme=highcontrast&show_icons=true&count_private=true"
                         alt="Github Stats" />
                 </div>
-                <div class="github-stat" id="most-lang">
+                <!-- <div class="github-stat" id="most-lang">
                     <img src="https://activity-graph.herokuapp.com/graph?username=thecodervaibhav&theme=xcode"
                         alt="Github Graph" />
-                </div>
+                </div> -->
             </div>
         </div>
     <h4 class="mb-0">
