rivised and add new micro services project in portfolio

--- a/index.html
+++ b/index.html
@@ -214,6 +214,23 @@
     <section class="project" id="project"> 
         <h2 class="title">Project</h2>
         <div class="cont-box">
+
+            <div class="project-main">
+                <div class="inside-1"><img src="./src/micro-serice.jpg" alt=""> </div>
+                <div class="inside-2">
+                    <div><h2>HOTEL RATING PORTAL SYSTEM</h2></div>
+                    <div class="pro-info"><p>This Project Made for Creating a Rest API on Hotels Reviews Portal System with fundamental CRUD operation. creating with the help of Micro-Services</p>
+                        <p class="tech-stach">Tech Stack: JAVA |Micro-Services | Spring Framework | Spring Boot | Spring Data JPA | Hibernate | MySQL | API Gateway </p>
+                        <p class="resp-proj"></p>
+                        <p class="resp-proj"> <span>My Responsibilities : Creating a Project with all services</span>
+                        </p>
+                        <div>
+                            <img class="pr1g pr0g" src="./src/GitHublogo2.png" alt="">
+                            <img class="pr1l pr0l" src="./src/newlive1.png" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
             <div class="project-main">
                 <div class="inside-1"><img src="./src/bus-pro1.JPG" alt=""> </div>
                 <div class="inside-2">
@@ -305,17 +322,19 @@
         <div class="container">
             <h1 class="title">Github Stats</h1>
             <div class="github-stats-list">
+    
                 <div class="github-stat">
-                    <img src="https://github-readme-stats.vercel.app/api/top-langs/?username=thecodervaibhav&layout=default&langs_count=8&hide=&theme=highcontrast" alt="vaibhav ghawale" height="275px" width="30%"/>
+                    <img src="https://github-readme-stats.vercel.app/api?username=thecodervaibhav&theme=highcontrast&show_icons=true&count_private=true"
+                        alt="Github Stats" />
                 </div>
                 <div class="github-stat">
                     <img src="https://github-readme-streak-stats.herokuapp.com/?user=thecodervaibhav&theme=highcontrast"
                         alt="Github Contributions" />
                 </div>
                 <div class="github-stat">
-                    <img src="https://github-readme-stats.vercel.app/api?username=thecodervaibhav&theme=highcontrast&show_icons=true&count_private=true"
-                        alt="Github Stats" />
+                    <img src="https://github-readme-stats.vercel.app/api/top-langs/?username=thecodervaibhav&layout=default&langs_count=8&hide=&theme=highcontrast" alt="vaibhav ghawale" height="275px" width="30%"/>
                 </div>
+                
                 <!-- <div class="github-stat" id="most-lang">
                     <img src="https://activity-graph.herokuapp.com/graph?username=thecodervaibhav&theme=xcode"
                         alt="Github Graph" />
