--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
                     <p class="resp-proj">My Responsibilities
                     front-end and backend database.
                     Creating a navabar with all sign in and sigu up functinalities</P>
-                    <!-- <a href="https://github.com/thecodervaibhav/Team-App-Monsters" class="resume-btn">Github</a>
+                    <!-- <a href="https://github.com/vaibhavghawale/Team-App-Monsters" class="resume-btn">Github</a>
                     <a href="https://reliable-llama-c038f5.netlify.app/" class="resume-btn">Live</a> -->
                     <div>
                         <img class="pr3g" src="./src/GitHublogo2.png" alt="">
@@ -324,19 +324,19 @@
             <div class="github-stats-list">
     
                 <div class="github-stat">
-                    <img src="https://github-readme-stats.vercel.app/api?username=thecodervaibhav&theme=highcontrast&show_icons=true&count_private=true"
+                    <img src="https://github-readme-stats.vercel.app/api?username=vaibhavghawale&theme=highcontrast&show_icons=true&count_private=true"
                         alt="Github Stats" />
                 </div>
                 <div class="github-stat">
-                    <img src="https://github-readme-streak-stats.herokuapp.com/?user=thecodervaibhav&theme=highcontrast"
+                    <img src="https://github-readme-streak-stats.herokuapp.com/?user=vaibhavghawale&theme=highcontrast"
                         alt="Github Contributions" />
                 </div>
                 <div class="github-stat">
-                    <img src="https://github-readme-stats.vercel.app/api/top-langs/?username=thecodervaibhav&layout=default&langs_count=8&hide=&theme=highcontrast" alt="vaibhav ghawale" height="275px" width="30%"/>
+                    <img src="https://github-readme-stats.vercel.app/api/top-langs/?username=vaibhavghawale&layout=default&langs_count=8&hide=&theme=highcontrast" alt="vaibhav ghawale" height="275px" width="30%"/>
                 </div>
                 
                 <!-- <div class="github-stat" id="most-lang">
-                    <img src="https://activity-graph.herokuapp.com/graph?username=thecodervaibhav&theme=xcode"
+                    <img src="https://activity-graph.herokuapp.com/graph?username=vaibhavghawale&theme=xcode"
                         alt="Github Graph" />
                 </div> -->
             </div>
@@ -386,7 +386,7 @@
                 <div class="cont-box-1 cont-box-a "><img src="./src/newphone.png" alt="" ><h2><a href="tel:+918554958977">+91 8554958977</a></h2></div>
                 <div class="cont-box-1 cont-box-b"><img src="./src/newmail.png" alt=""><h2><a href="mailto:vaibhavghawale007@gmail.com?subject=regarding hiring">e-Mail</a></h2></div>
                 <div class="cont-box-1 cont-box-c"><img src="./src/newlink.png"  alt=""><h2><a href="https://www.linkedin.com/in/vaibhavghawale15/" target="_blank">Linkedin</a></h2></div>
-                <div class="cont-box-1 cont-box-d"><img src="./src/newgit.png" alt="" ><h2><a href="https://github.com/thecodervaibhav" target="_blank">Github</a> </h2></div>
+                <div class="cont-box-1 cont-box-d"><img src="./src/newgit.png" alt="" ><h2><a href="https://github.com/vaibhavghawale" target="_blank">Github</a> </h2></div>
                 <div class="cont-box-1 cont-box-e"><img src="./src/newtwi.png" alt="" > <h2><a href="https://twitter.com/VaibhavGhawale" target="_blank">Twitter</a></h2></div>
                 <div class="cont-box-1 cont-box-f open-me"><img src="./src/newresume.png" alt="" > <h2><a href="./src/Vaibhav-Ghawale-Resume.pdf" download="Vaibhav Ghawale Resume">Resume</a></h2></div>
                </div>
@@ -405,5 +405,5 @@
 <script src="index.js"></script>
 <script src="https://unpkg.com/github-calendar@latest/dist/github-calendar.min.js"></script>
 <script>
-  GitHubCalendar(".calendar", "thecodervaibhav", { responsive: true });
+  GitHubCalendar(".calendar", "vaibhavghawale", { responsive: true });
 </script>
